{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 2783,
  "lineage": "7b7cd20e-0301-087c-fdc0-bbca6506055f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:040712939172:instance/i-028dbb8d34736e077",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s-cluster-iam-master-profile",
            "id": "i-028dbb8d34736e077",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "id_rsa_sdtd",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0af644ad84ae82256",
            "private_dns": "ip-10-0-0-180.ec2.internal",
            "private_ip": "10.0.0.180",
            "public_dns": "ec2-54-162-114-210.compute-1.amazonaws.com",
            "public_ip": "54.162.114.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01281db6895c84ca4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-04c3b83501e5c0c11"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03d4147604a54aa26",
            "tags": {
              "Name": "k8s-master-ec2-sdtd",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04c3b83501e5c0c11"
            ]
          },
          "dependencies": [
            "aws_security_group.SDTD_VPC_Security_Group",
            "aws_subnet.SDTD_VPC_Subnet",
            "aws_vpc.SDTD_VPC",
            "random_string.token_id",
            "random_string.token_secret"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:040712939172:instance/i-044f53a36cafc4417",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s-cluster-iam-worker-profile",
            "id": "i-044f53a36cafc4417",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "id_rsa_sdtd",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09f2bd5e5b608734b",
            "private_dns": "ip-10-0-0-20.ec2.internal",
            "private_ip": "10.0.0.20",
            "public_dns": "ec2-35-173-187-29.compute-1.amazonaws.com",
            "public_ip": "35.173.187.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05897f9d013ec8703",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-04c3b83501e5c0c11"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03d4147604a54aa26",
            "tags": {
              "Name": "k8s-worker-0-sdtd",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04c3b83501e5c0c11"
            ]
          },
          "dependencies": [
            "aws_instance.master",
            "aws_security_group.SDTD_VPC_Security_Group",
            "aws_subnet.SDTD_VPC_Subnet",
            "aws_vpc.SDTD_VPC",
            "random_string.token_id",
            "random_string.token_secret"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:040712939172:instance/i-08253dcbaf4ea2bd2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s-cluster-iam-worker-profile",
            "id": "i-08253dcbaf4ea2bd2",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "id_rsa_sdtd",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09c5343ff8af5a84b",
            "private_dns": "ip-10-0-0-244.ec2.internal",
            "private_ip": "10.0.0.244",
            "public_dns": "ec2-3-92-201-165.compute-1.amazonaws.com",
            "public_ip": "3.92.201.165",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cc5d056373ebcb27",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-04c3b83501e5c0c11"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03d4147604a54aa26",
            "tags": {
              "Name": "k8s-worker-1-sdtd",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04c3b83501e5c0c11"
            ]
          },
          "dependencies": [
            "aws_instance.master",
            "aws_security_group.SDTD_VPC_Security_Group",
            "aws_subnet.SDTD_VPC_Subnet",
            "aws_vpc.SDTD_VPC",
            "random_string.token_id",
            "random_string.token_secret"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:040712939172:instance/i-0e025a42c04ae0b76",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s-cluster-iam-worker-profile",
            "id": "i-0e025a42c04ae0b76",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "id_rsa_sdtd",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-065e9075556921d62",
            "private_dns": "ip-10-0-0-137.ec2.internal",
            "private_ip": "10.0.0.137",
            "public_dns": "ec2-3-92-221-66.compute-1.amazonaws.com",
            "public_ip": "3.92.221.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-087d7a3a77b79db4f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-04c3b83501e5c0c11"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03d4147604a54aa26",
            "tags": {
              "Name": "k8s-worker-2-sdtd",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04c3b83501e5c0c11"
            ]
          },
          "dependencies": [
            "aws_instance.master",
            "aws_security_group.SDTD_VPC_Security_Group",
            "aws_subnet.SDTD_VPC_Subnet",
            "aws_vpc.SDTD_VPC",
            "random_string.token_id",
            "random_string.token_secret"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:040712939172:instance/i-0f01fbb75fdc8642a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s-cluster-iam-worker-profile",
            "id": "i-0f01fbb75fdc8642a",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "id_rsa_sdtd",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b603c295d920c2e4",
            "private_dns": "ip-10-0-0-230.ec2.internal",
            "private_ip": "10.0.0.230",
            "public_dns": "ec2-3-86-94-242.compute-1.amazonaws.com",
            "public_ip": "3.86.94.242",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05c90478a3fa9f5d0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-04c3b83501e5c0c11"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03d4147604a54aa26",
            "tags": {
              "Name": "k8s-worker-3-sdtd",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04c3b83501e5c0c11"
            ]
          },
          "dependencies": [
            "aws_instance.master",
            "aws_security_group.SDTD_VPC_Security_Group",
            "aws_subnet.SDTD_VPC_Subnet",
            "aws_vpc.SDTD_VPC",
            "random_string.token_id",
            "random_string.token_secret"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:040712939172:instance/i-0333d9594ffac26ce",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s-cluster-iam-worker-profile",
            "id": "i-0333d9594ffac26ce",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "id_rsa_sdtd",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-004ce6ccc911ecce0",
            "private_dns": "ip-10-0-0-60.ec2.internal",
            "private_ip": "10.0.0.60",
            "public_dns": "ec2-3-86-83-168.compute-1.amazonaws.com",
            "public_ip": "3.86.83.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-040667e719bb0c0b4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-04c3b83501e5c0c11"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03d4147604a54aa26",
            "tags": {
              "Name": "k8s-worker-4-sdtd",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04c3b83501e5c0c11"
            ]
          },
          "dependencies": [
            "aws_instance.master",
            "aws_security_group.SDTD_VPC_Security_Group",
            "aws_subnet.SDTD_VPC_Subnet",
            "aws_vpc.SDTD_VPC",
            "random_string.token_id",
            "random_string.token_secret"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:040712939172:instance/i-0aeb530dde39117e4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s-cluster-iam-worker-profile",
            "id": "i-0aeb530dde39117e4",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "id_rsa_sdtd",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d75022115b201860",
            "private_dns": "ip-10-0-0-123.ec2.internal",
            "private_ip": "10.0.0.123",
            "public_dns": "ec2-3-88-193-14.compute-1.amazonaws.com",
            "public_ip": "3.88.193.14",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09f5376643480bcbc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-04c3b83501e5c0c11"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03d4147604a54aa26",
            "tags": {
              "Name": "k8s-worker-5-sdtd",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04c3b83501e5c0c11"
            ]
          },
          "dependencies": [
            "aws_instance.master",
            "aws_security_group.SDTD_VPC_Security_Group",
            "aws_subnet.SDTD_VPC_Subnet",
            "aws_vpc.SDTD_VPC",
            "random_string.token_id",
            "random_string.token_secret"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "SDTD_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040712939172:internet-gateway/igw-000c045478bc62de3",
            "id": "igw-000c045478bc62de3",
            "owner_id": "040712939172",
            "tags": {
              "Name": "k8s-cluster-igw-sdtd",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "vpc_id": "vpc-0c95829a43ee638dc"
          },
          "dependencies": [
            "aws_vpc.SDTD_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "SDTD_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08b00255074ee153a",
            "owner_id": "040712939172",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-000c045478bc62de3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "k8s-cluster-igw-rtb",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "vpc_id": "vpc-0c95829a43ee638dc"
          },
          "dependencies": [
            "aws_internet_gateway.SDTD_igw",
            "aws_vpc.SDTD_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "SCTD_VPC_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f19ed94eab2727c",
            "route_table_id": "rtb-08b00255074ee153a",
            "subnet_id": "subnet-03d4147604a54aa26"
          },
          "dependencies": [
            "aws_internet_gateway.SDTD_igw",
            "aws_route_table.SDTD_rtb",
            "aws_subnet.SDTD_VPC_Subnet",
            "aws_vpc.SDTD_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SDTD_VPC_Security_Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040712939172:security-group/sg-04c3b83501e5c0c11",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04c3b83501e5c0c11",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "k8s-cluster-sg-sdtd",
            "name_prefix": "",
            "owner_id": "040712939172",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k8s-cluster-sg-sdtd"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c95829a43ee638dc"
          },
          "dependencies": [
            "aws_vpc.SDTD_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SDTD_VPC_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040712939172:subnet/subnet-03d4147604a54aa26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-03d4147604a54aa26",
            "map_public_ip_on_launch": true,
            "owner_id": "040712939172",
            "tags": {
              "Name": "k8s-cluster-net-SDTD",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "vpc_id": "vpc-0c95829a43ee638dc"
          },
          "dependencies": [
            "aws_vpc.SDTD_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "SDTD_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040712939172:vpc/vpc-0c95829a43ee638dc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02387f6ddb35439fc",
            "default_route_table_id": "rtb-08ed339828743b8e4",
            "default_security_group_id": "sg-00655d97c9d2e29cf",
            "dhcp_options_id": "dopt-b937e7c3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c95829a43ee638dc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08ed339828743b8e4",
            "owner_id": "040712939172",
            "tags": {
              "Name": "k8s-cluster-vpc-sdtd",
              "kubernetes.io/cluster/kubernetes": "owned"
            }
          }
        }
      ]
    }
  ]
}